objects/Data_Interface_Team__c.object
<CustomObject>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF( Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pharmacy_Commingle_Applicable__c</fullName>
        <label>Is Pharmacy Commingle Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Vendor_Eligibility_Applicable__c</fullName>
        <label>Is Vendor Eligibility Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_CSR_To_EDS1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File CSR To EDS1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_CSR_To_EVAL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File CSR To EVAL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_CSR_To_LOAD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File CSR To LOAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_Control_Plan_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File Control Plan Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File EBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_Estimated_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File Estimated Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_FTP_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File FTP File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_Group_Confirmation_Of_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File Group Confirmation Of File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File IT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_SIT_Test_File_To_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File SIT Test File To NASCO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_TPA_Contact_Name_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File TPA Contact Name/Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_UAT_MO_Test_File_To_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File UAT/MO Test File To NASCO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_Watchlist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Auth File Watchlist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Auth_File_Work_Effort_Completed__c</fullName>
        <label>JAA Auth File % Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Approval_For_IBM_IT_Prod__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Approval For IBM/IT Prod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_CSR_To_EDS1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle CSR To EDS1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Confluence_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Confluence Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Control_Plan_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Control Plan Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_EFX_Task_RITM_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle EFX Task / RITM Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Enter_Medical_Clms_In_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Enter Medical Clms In MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_FTP_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle FTP File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Mainframe_Dataset_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Mainframe Dataset Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_NDM_Process_DSN_Names__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle NDM Process/DSN Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_NIC_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle NIC Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Overall_Status__c</fullName>
        <label>JAA Commingle Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold Run Out</fullName>
                </value>
                <value>
                    <fullName>Hold 90 Day File</fullName>
                </value>
                <value>
                    <fullName>No Work Needed</fullName>
                </value>
                <value>
                    <fullName>Post Production Checkout</fullName>
                </value>
                <value>
                    <fullName>Worked On Another UWR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Review_Verify_UAT_MNASC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Review/Verify UAT (MNASC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_TPA_Contact_Name_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle TPA Contact Name/Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Vendor_Name__c</fullName>
        <label>JAA Commingle Vendor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AnthemRx</fullName>
                </value>
                <value>
                    <fullName>Cameron</fullName>
                </value>
                <value>
                    <fullName>Catalyst/Catamaran/OptumRX</fullName>
                </value>
                <value>
                    <fullName>CIGNA Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Envision</fullName>
                </value>
                <value>
                    <fullName>ESI</fullName>
                </value>
                <value>
                    <fullName>IBH (Integrated Behavioral Health)</fullName>
                </value>
                <value>
                    <fullName>Kroger/ KPP (Kroger Prescription Plans)</fullName>
                </value>
                <value>
                    <fullName>MedImpact</fullName>
                </value>
                <value>
                    <fullName>MedTrak</fullName>
                </value>
                <value>
                    <fullName>Navitus</fullName>
                </value>
                <value>
                    <fullName>PharmAvail</fullName>
                </value>
                <value>
                    <fullName>ProAct</fullName>
                </value>
                <value>
                    <fullName>Serve You Rx</fullName>
                </value>
                <value>
                    <fullName>RxBenefits via ESI</fullName>
                </value>
                <value>
                    <fullName>TrueScripts via PDMI (Pharmacy Data Management, In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Watchlist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Commingle Watchlist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Commingle_Work_Effort_Completed__c</fullName>
        <label>JAA Commingle % Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_CSR_To_COMP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init CSR To COMP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_CSR_To_Load__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init CSR To Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_Control_Plan_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init Control Plan Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init EBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_FTP_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init FTP File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_File_Reciept_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init File Reciept Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init IT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_NDM_File_To_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init NDM File To NASCO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_NDM_Job_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init NDM Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_Overall_Status__c</fullName>
        <label>JAA History Accum Init Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold Run Out</fullName>
                </value>
                <value>
                    <fullName>Hold 90 Day File</fullName>
                </value>
                <value>
                    <fullName>No Work Needed</fullName>
                </value>
                <value>
                    <fullName>Post Production Checkout</fullName>
                </value>
                <value>
                    <fullName>Worked On Another UWR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Init_Watchlist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Init Watchlist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_CSR_To_Load__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub CSR To Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_Control_Plan_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub Control Plan Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_FTP_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub FTP File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_File_Receipt_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub File Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_NDM_File_To_NASCO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub NDM File To NASCO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_Overall_Status__c</fullName>
        <label>JAA History Accum Sub Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold Run Out</fullName>
                </value>
                <value>
                    <fullName>Hold 90 Day File</fullName>
                </value>
                <value>
                    <fullName>No Work Needed</fullName>
                </value>
                <value>
                    <fullName>Post Production Checkout</fullName>
                </value>
                <value>
                    <fullName>Worked On Another UWR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_History_Accum_Sub_Watchlist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA History Accum Sub Watchlist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JAA_Hx_Accum_Init_Run_Macro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Hx Accum Init Run Macro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Hx_Accum_Init_Work_Effort_Comp__c</fullName>
        <label>JAA Hx Accum Init % Work Effort Comp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JAA_Hx_Accum_Sub_Apply_Formula_Run_Macro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Hx Accum Sub Apply Formula/Run Macro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Hx_Accum_Sub_Notify_Imp_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JAA Hx Accum Sub Notify Imp Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JAA_Hx_Accum_Sub_Work_Effort_Completed__c</fullName>
        <label>JAA Hx Accum Sub % Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JAA__c</fullName>
        <label>JAA Auth File Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold Run Out</fullName>
                </value>
                <value>
                    <fullName>Hold 90 Day File</fullName>
                </value>
                <value>
                    <fullName>No Work Needed</fullName>
                </value>
                <value>
                    <fullName>Post Production Checkout</fullName>
                </value>
                <value>
                    <fullName>worked On Another UWR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIRA_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JIRA Request</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTM_Amount_Commingled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LTM Amount Commingled</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Load_File_And_Review_In_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load File And Review In MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Group_ID_To_TSO_Conv_Table__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load Group ID To TSO Conv Table</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_JAA_Commingle_SIT_Test_In_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load JAA Commingle  SIT Test In MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Repository_Production_Spr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load Repository Production Spr</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Repository_Spr_To_TSO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load Repository Spr To TSO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Verify_EAV_Commingle_SIT_Test_In_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load/Verify EAV Commingle SIT Test In MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Verify_Inhouse_Comm_SIT_Test_In_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Load/Verify Inhouse Comm SIT Test In MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAXDTABL_Geno_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHFLDMP Construction CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAXQUAL_Geno_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MAXQUAL Geno CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Commingle_4th_Quarter_Ded_Carry_Over__c</fullName>
        <label>MH Commingle 4th Quarter Ded Carry Over</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MH_Commingle_CR_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MH Commingle CR/SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Commingle_Claim_Stop_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MH Commingle Claim Stop End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MH_Commingle_Claim_Stop_Request_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MH Commingle Claim Stop Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MH_Commingle_Claim_Stop_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MH Commingle Claim Stop Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MH_Commingle_Method_Of_Transmit__c</fullName>
        <label>MH Commingle Method Of Transmit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>FTP/PGP</fullName>
                </value>
                <value>
                    <fullName>NDM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MH_Commingle_Of_Work_Effort_Completed__c</fullName>
        <label>MH Commingle % Of Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MO_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MO Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapping_W_ID_Card_Prefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mapping W/ ID Card Prefix</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Clms_In_MO_For_EAV_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Clms In MO For EAV Commingle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Clms_In_MO_For_Inhouse_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Clms In MO For Inhouse Commingle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_File_Frequency__c</fullName>
        <label>Mental Health Commingle File Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_History_Needed__c</fullName>
        <label>Mental Health Commingle History Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Op_Log_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle Op Log Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Vendor_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle Vendor Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Vendor_Name__c</fullName>
        <label>Mental Health Commingle Vendor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beacon Health Options</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Compsych</fullName>
                </value>
                <value>
                    <fullName>EHIM</fullName>
                </value>
                <value>
                    <fullName>Magellan</fullName>
                </value>
                <value>
                    <fullName>Optum (UBH)</fullName>
                </value>
                <value>
                    <fullName>ValueOptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Vendor_Status__c</fullName>
        <label>Mental Health Commingle Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mental_Health_Commingle_Watchlist_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Health Commingle Watchlist Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Hlth_Commingle_Proj_Team_Members__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mental Hlth Commingle Proj Team Members</label>
        <type>TextArea</type>
    </fields>
</CustomObject>